...
                                    <constraint firstAttribute="width" constant="60" id="pkL-Jd-W7Z"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHS-Ne-JdF">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ruU-vJ-Xj3"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                <connections>
                                    <outlet property="delegate" destination="im0-2i-Zpv" id="GvC-kf-ETK"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOY-Q7-54g">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="7sP-U5-gr3"/>
                                    <constraint firstAttribute="height" constant="48" id="eg5-rB-trp"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_button"/>
...
